--- a/Sources/App/Modules/Blog/Views/Admin/Links/List.html
+++ b/Sources/App/Modules/Blog/Views/Admin/Links/List.html
@@ -1,27 +1,27 @@
-#extend("Admin/Table"):
-    #export("title", "Links")
-    
-    #export("toolbar-buttons"):
-    <li><a href="/admin/blog/authors/#param("id")"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg></a></li>
-    #endexport
-
-    #export("th"):
+#define(toolbarButtons):
+<li><a href="/admin/blog/authors/#Request(parameter: "id")"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg></a></li>
+#enddefine
+#define(th):
+    #var(link = nil)
+    <tr>
+        #(link = ["key": "name", "default": true])
+        <th>#inline("Admin/SortLink")</th>
+        #(link = ["key": "url"])
+        <th>#inline("Admin/SortLink")</th>
+        #(link = ["key": "priority"])
+        <th>#inline("Admin/SortLink")</th>
+        <th>Actions</th>
+    </tr>
+#enddefine
+#define(tb):
+    #for(item in list.items):
         <tr>
-            <th><a href="#sortQuery("name")">Name #sortIndicator("name")</a></th>
-            <th><a href="#sortQuery("url")">Url #sortIndicator("url")</a></th>
-            <th class="small"><a href="#sortQuery("priority")">Priority #sortIndicator("priority")</a></th>
-            <th class="actions">Actions</th>
+            <td><a href="#($req.url.path)#(item.id)/">#(item.name)</a></td>
+            <td><a href="#($req.url.path)#(item.id)/">#(item.url)</a></td>
+            <td class="small center"><a href="#($req.url.path)#(item.id)/">#(item.priority)</a></td>
+            #inline("Admin/Actions")
         </tr>
-    #endexport
-
-    #export("tb"):
-        #for(item in items):
-            <tr>
-                <td><a href="#($req.url.path)#(item.id)/">#(item.name)</a></td>
-                <td><a href="#($req.url.path)#(item.id)/">#(item.url)</a></td>
-                <td class="small center"><a href="#($req.url.path)#(item.id)/">#(item.priority)</a></td>
-                #extend("Admin/Actions"):#endextend
-            </tr>
-        #endfor
-    #endexport
-#endextend
+    #endfor
+#enddefine
+#let(title = "Links")
+#inline("Admin/Table")
