--- a/Sources/App/Modules/Frontend/Views/Admin/Metadatas/Edit.html
+++ b/Sources/App/Modules/Frontend/Views/Admin/Metadatas/Edit.html
@@ -1,4 +1,4 @@
-#define(toolbar):
+#define(toolbarButtons):
     #if(edit.id != nil):
     <li><a href="/admin/#(edit.module.value)/#(edit.model.value)/#(edit.reference.value)">#inline("Admin/Icons/Document", as: raw)</a></li>
     <li><a href="/#(edit.slug.value)/" target="_blank">#inline("Admin/Icons/Eye", as: raw)</a></li>
