--- a/Sources/App/Modules/Admin/Views/Form.html
+++ b/Sources/App/Modules/Admin/Views/Form.html
@@ -1,8 +1,12 @@
-#define(body):
-<div class="wrapper">
-    <h2><a href="#($req.url.path.trimLast())">#(form.title ?? form.key.capitalized())</a> / #(form.id != nil ? "Edit" : "Create")</h2>
-</div>
+#define(toolbar):
+    <li><b>#if(edit.id != nil):Edit#else:Create#endif</b></li>
+    #toolbarButtons()
+#enddefine
+#define(breadcrumb):
+    <li><a href="#($req.url.path.trimLast())">#(title)</a></li>
+#enddefine
 
+#define(body):
 <form id="#(form.key)-edit-form" class="wrapper" method="post" action="#($req.url.path)"#if(form.multipart ?? false): enctype="multipart/form-data"#endif>
     #var(field = nil)
 
