--- a/Sources/App/Modules/Blog/Views/Admin/Posts/Edit.html
+++ b/Sources/App/Modules/Blog/Views/Admin/Posts/Edit.html
@@ -1,4 +1,4 @@
-#define(toolbar):
+#define(toolbarButtons):
     #if(edit.metadata != nil):
     <li><a href="/admin/frontend/metadatas/#(edit.metadata.id)">#inline("Admin/Icons/Feather", as: raw)</a></li>
     <li><a href="/#(edit.metadata.slug)/" target="_blank">#inline("Admin/Icons/Eye", as: raw)</a></li>
