--- a/Sources/App/Modules/Blog/Views/Frontend/Categories.html
+++ b/Sources/App/Modules/Blog/Views/Frontend/Categories.html
@@ -1,22 +1,24 @@
-#extend("Frontend/Index"):
-    #export("body"):
+#let(head = [
+    "title": $vars["categories.page.title"],
+    "description": $vars["categories.page.description"]
+])
+#define(body):
+<section>
+    <h1>#(head.title)</h1>
+    <p>#(head.description)</p>
+</section>
 
-    <section>
-        <h1>#systemVariable("categories.page.title")</h1>
-        <p>#systemVariable("categories.page.description")</p>
-    </section>
+<section id="categories">
+    <ul>
+        #for(category in categories):
+        <li>
+            <img class="rounded" src="#(category.imageKey.resolve())">
+            <h3><a href="/#(category.metadata.slug)">#(category.title)</a></h3>
+            <p>#(category.excerpt)</p>
+        </li>
+        #endfor
+    </ul>
+</section>
+#enddefine
+#inline("Frontend/Index")
 
-    <section id="categories">
-        <ul>
-            #for(item in body.list):
-            <li>
-                <img src="#resolve(item.category.imageKey)">
-                <h3><a href="/#(item.content.slug)">#(item.category.title)</a></h3>
-                <p>#(item.category.excerpt)</p>
-            </li>
-            #endfor
-        </ul>
-    </section>
-
-    #endexport
-#endextend
