--- a/Sources/App/Modules/Blog/Views/Frontend/Category.html
+++ b/Sources/App/Modules/Blog/Views/Frontend/Category.html
@@ -1,34 +1,37 @@
-#extend("Frontend/Index"):
-    #export("body"):
-    
+#let(head = [
+    "title": category.title,
+    "description": category.excerpt
+])
+#define(body):
 <br><br>
 
-    <section id="category">
-        <img src="#resolve(body.category.imageKey)">
-        <h2>#(body.category.title)</h2>
-        <p>#(body.category.excerpt)</p>
-        <span><b>#count(body.items) posts</b></span>
-    </section>
+<section id="category">
+    <img src="#(category.imageKey.resolve())">
+    <h2>#(category.title)</h2>
+    <p>#(category.excerpt)</p>
+    <span><b>#(posts.count()) post#if(posts.count() > 1):s#endif</b></span>
+</section>
 
 <br><br>
-        
-    <section  class="grid">
-        #for(item in body.items):
-        <div>
-            <a href="/#(item.content.slug)" class="card">
-                <figure style="background-image: url(#resolve(item.post.imageKey));"></figure>
-                <article>
-                    <div class="meta">
-                        <span class="category">#(item.category.title)</span>
-                    </div>
-                    <h3>#(item.post.title)</h3>
-                    <p>#(item.post.excerpt)</p>
-                    <time datetime="#dateFormatter(item.content.date, "y/MM/dd")">#dateFormatter(item.content.date, "y/MM/dd")</time>
-                </article>
-            </a>
-        </div>
-        #endfor
-    </section>
 
-    #endexport
-#endextend
+<section  class="grid">
+    #for(post in posts):
+    <div>
+        <a href="/#(post.metadata.slug)" class="card">
+            <figure style="background-image: url(#(post.imageKey.resolve()));"></figure>
+            <article>
+                <div class="meta">
+                    <span class="category">#(category.title)</span>
+                </div>
+                <h3>#(post.title)</h3>
+                <p>#(post.excerpt)</p>
+                <time datetime="#Date(timeStamp: post.metadata.date, localizedFormat: "y/MM/dd")">
+                    #Date(timeStamp: post.metadata.date, localizedFormat: "y/MM/dd")
+                </time>
+            </article>
+        </a>
+    </div>
+    #endfor
+</section>
+#enddefine
+#inline("Frontend/Index")
