--- a/Sources/App/Modules/Blog/Views/Frontend/Home.html
+++ b/Sources/App/Modules/Blog/Views/Frontend/Home.html
@@ -1,25 +1,31 @@
+#let(head = [
+    "title": $vars["home.page.title"],
+    "description": $vars["home.page.description"]
+])
 #define(body):
-    <section class="home">
-        <h1>#systemVariable("home.page.title")</h1>
-        <p>#systemVariable("home.page.description")</p>
-    </section>
+<section class="home">
+    <h1>#(head.title)</h1>
+    <p>#(head.description)</p>
+</section>
 
-    <section id="home" class="grid home">
-        #for(item in body.list):
-        <div #if(isFirst): class="first" #endif>
-            <a href="#(item.content.slug)" class="card">
-                <figure style="background-image: url(#resolve(item.post.imageKey));"></figure>
-                <article>
-                    <div class="meta">
-                        <span class="category">#(item.category.title)</span>
-                    </div>
-                    <h3>#(item.post.title)</h3>
-                    <p>#(item.post.excerpt)</p>
-                    <time datetime="#dateFormatter(item.content.date, "y/MM/dd")">#dateFormatter(item.content.date, "y/MM/dd")</time>
-                </article>
-            </a>
-        </div>
-        #endfor
-    </section>
+<section id="home" class="grid home">
+    #for(post in posts):
+    <div #if(isFirst): class="first" #endif>
+        <a href="/#(post.metadata.slug)" class="card">
+            <figure style="background-image: url(#(post.imageKey.resolve()));"></figure>
+            <article>
+                <div class="meta">
+                    <span class="category">#(post.category.title)</span>
+                </div>
+                <h3>#(post.title)</h3>
+                <p>#(post.excerpt)</p>
+                <time datetime="#Date(timeStamp: post.metadata.date, localizedFormat: "y/MM/dd")">
+                    #Date(timeStamp: post.metadata.date, localizedFormat: "y/MM/dd")
+                </time>
+            </article>
+        </a>
+    </div>
+    #endfor
+</section>
 #enddefine
 #inline("Frontend/Index")
