--- a/Sources/App/Modules/Frontend/Templates/Pagination.html
+++ b/Sources/App/Modules/Frontend/Templates/Pagination.html
@@ -1,4 +1,4 @@
-#(let pages = list.info ?? nil)
+#(let pages = page.info ?? nil)
 #if(pages.total > 1 && pages.current < pages.total + 1):
 <hr>
 <section class="wrapper">
