--- a/Sources/App/Modules/User/Templates/Frontend/Login.html
+++ b/Sources/App/Modules/User/Templates/Frontend/Login.html
@@ -3,25 +3,33 @@
     "description": "Sign in with your existing account"
 ])
 #define(body):
-<div id="login-box">
-<h2>#(head.title)</h2>
-<p>#(head.description)</p>
+<div id="login" class="wrapper w:full m:l">
 
-<form action="#($req.url.path)?redirect=admin" method="post">
-    #var(field = nil)
-    #(field = ["id": "email", "type": "email", "required": true, "data": edit.email, "placeholder": "hello@binarybirds.com"])
-    #inline("Admin/Fields/Text")
+    <header class="m:b:l center">
+        <h1>#(head.title)</h1>
+        <p>#(head.description)</p>
+    </header>
     
-    #(field = ["id": "password", "type": "password", "required": true, "data": edit.password])
-    #inline("Admin/Fields/Text")
-    
-    #(field = ["label": "Sign in"])
-    #inline("Admin/Fields/Button")
+    <section class="wrapper w:s br:s bg3">
+        
+        <form action="#($req.url.path)?redirect=admin" method="post" class="p:l">
+            #var(field = nil)
+            #(field = ["id": "email", "type": "email", "required": true, "data": edit.email, "placeholder": "hello@binarybirds.com"])
+            #inline("Admin/Fields/Text")
+            
+            #(field = ["id": "password", "type": "password", "required": true, "data": edit.password])
+            #inline("Admin/Fields/Text")
+            
+            #(field = ["label": "Sign in"])
+            #inline("Admin/Fields/Button")
 
-    #if(edit.notification != nil):
-    <p id="notification"><span class="error">#(edit.notification)</span></p>
-    #endif
-</form>
+            #if(edit.notification != nil):
+            <p id="notification" class="center"><span class="error">#(edit.notification)</span></p>
+            #endif
+        </form>
+        
+    </section>
+
 </div>
 #enddefine
 #inline("Frontend/Index")
