--- a/Public/css/frontend.dark.css
+++ b/Public/css/frontend.dark.css
@@ -4,6 +4,13 @@ body {
     color: #ccc;
     text-shadow: 0px 1px 0px #222;
 }
+
+.bg1 { background: #2c2c2e; }
+.bg2 { background: #1c1c1e; }
+.bg3 { background: #222; }
+
+.border1 { border: 1px solid #000; }
+
 h1, h2, h3, h4, h5, h6 {
     color: #e0e0e0;
 }
@@ -12,6 +19,12 @@ a:link, a:visited {
 }
 a:link:hover, a:visited:hover {
     color: #fa3ebe;
+}
+a p {
+    color: #ccc;
+}
+.underline {
+    border-bottom: 1px solid #21a9ff;
 }
 pre {
     background: #1a1a1a;
@@ -94,7 +107,7 @@ input:focus, textarea:focus, select:focus {
     background: #1c1c1e;
     color: #ccc;
 }
-.card:hover {
+.shadow-hover:hover {
     box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
 }
 .card p, .excerpt {
@@ -111,18 +124,4 @@ input:focus, textarea:focus, select:focus {
 /*}*/
 form .required, form .error {
     color: #ee6a5d;
-}
-#login-box {
-    background: #1c1c1e;
-    border: 1px solid #000;
-}
-#login-box p {
-    color: #999;
-}
-#categories li, #authors li {
-    background: #222;
-}
-#categories img, #category img {
-    background: #222;
-    box-shadow: 0px 4px 8px #111;
 }
